--- a/app/src/main/res/layout/layout_video_detail_dialog.xml
+++ b/app/src/main/res/layout/layout_video_detail_dialog.xml
@@ -164,29 +164,21 @@
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
-        <LinearLayout
+        <android.widget.Space
+            android:layout_width="0dp"
+            android:layout_height="10dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnCancel"
+            style="@style/MaterialButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingStart="18dp"
-            android:paddingTop="4dp"
-            android:paddingEnd="18dp">
-
-            <Space
-                android:layout_width="8dp"
-                android:layout_height="8dp" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCancel"
-                style="@style/MaterialButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/confirm" />
-        </LinearLayout>
+            android:layout_marginStart="18dp"
+            android:layout_marginEnd="18dp"
+            android:text="@string/confirm" />
 
         <android.widget.Space
             android:layout_width="0dp"
-            android:layout_height="30dp" />
+            android:layout_height="20dp" />
     </LinearLayout>
 </layout>
