--- a/app/src/main/res/menu/file_browser_tool_bar_menu.xml
+++ b/app/src/main/res/menu/file_browser_tool_bar_menu.xml
@@ -3,6 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_round_search_24"
+        android:iconTint="@color/colorOnPrimary"
+        android:title="@string/search"
+        app:iconTint="@color/colorOnPrimary"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction,UnusedAttribute" />
+    <item
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_round_refresh_24"
+        android:iconTint="@color/colorOnPrimary"
+        android:title="@string/refresh_list"
+        app:iconTint="@color/colorOnPrimary"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction,UnusedAttribute" />
+
+    <item
         android:id="@+id/more"
         android:icon="@drawable/ic_round_more_vert_24"
         android:iconTint="@color/colorOnPrimary"
