--- a/app/src/main/res/drawable/ic_round_file_apk_24.xml
+++ b/app/src/main/res/drawable/ic_round_file_apk_24.xml
@@ -3,16 +3,13 @@
     android:height="24dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
-  <path
-      android:pathData="M1024,910.2a113.8,113.8 0,0 1,-113.8 113.8H113.8a113.8,113.8 0,0 1,-113.8 -113.8V113.8a113.8,113.8 0,0 1,113.8 -113.8h682.7l227.6,227.6v682.7z"
-      android:fillColor="#4BB86A"/>
-  <path
-      android:pathData="M483.6,398.2a312.9,312.9 0,0 1,312.7 300.3L796.4,711.1L170.7,711.1A312.9,312.9 0,0 1,483.6 398.2zM366.9,512a42.7,42.7 0,1 0,0 85.3,42.7 42.7,0 0,0 0,-85.3zM594.5,512a42.7,42.7 0,1 0,0 85.3,42.7 42.7,0 0,0 0,-85.3z"
-      android:fillColor="#FFFFFF"/>
-  <path
-      android:pathData="M796.4,0l227.6,227.6h-170.7a56.9,56.9 0,0 1,-56.9 -56.9V0z"
-      android:fillColor="#80D89A"/>
-  <path
-      android:pathData="M190.4,378.1a28.4,28.4 0,0 1,36.3 -3.2l4,3.2 106.4,106.5a28.4,28.4 0,0 1,-36.3 43.5l-3.9,-3.3 -106.5,-106.4a28.4,28.4 0,0 1,0 -40.3zM785.3,378.1a28.4,28.4 0,0 0,-36.3 -3.2l-4,3.2L645.3,477.9a28.4,28.4 0,0 0,36.2 43.5l4,-3.3 99.8,-99.7a28.4,28.4 0,0 0,0 -40.3z"
-      android:fillColor="#FFFFFF"/>
+    <path
+        android:fillColor="#4BB86A"
+        android:pathData="m0,0m93.1,0l837.8,0q93.1,0 93.1,93.1l0,837.8q0,93.1 -93.1,93.1l-837.8,0q-93.1,0 -93.1,-93.1l0,-837.8q0,-93.1 93.1,-93.1z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="m512,355.6a312.9,312.9 0,0 1,312.7 300.3l0.2,12.6l-625.8,0a312.9,312.9 0,0 1,312.9 -312.9zM395.4,469.3a42.7,42.7 0,1 0,0 85.3a42.7,42.7 0,0 0,0 -85.3zM622.9,469.3a42.7,42.7 0,1 0,0 85.3a42.7,42.7 0,0 0,0 -85.3z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="m214.5,326.5a28.4,28.4 0,0 1,36.3 -3.2l4,3.2l106.4,106.5a28.4,28.4 0,0 1,-36.3 43.5l-3.9,-3.3l-106.5,-106.4a28.4,28.4 0,0 1,0 -40.3zM809.5,326.5a28.4,28.4 0,0 0,-36.3 -3.2l-4,3.2l-99.7,99.8a28.4,28.4 0,0 0,36.2 43.5l4,-3.3l99.8,-99.7a28.4,28.4 0,0 0,0 -40.3z" />
 </vector>
