--- a/app/src/main/res/drawable/ic_round_file_database_24.xml
+++ b/app/src/main/res/drawable/ic_round_file_database_24.xml
@@ -3,7 +3,16 @@
     android:height="24dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
-  <path
-      android:pathData="M853.3,0a170.7,170.7 0,0 1,170.7 170.7v682.7a170.7,170.7 0,0 1,-170.7 170.7L170.7,1024a170.7,170.7 0,0 1,-170.7 -170.7L0,170.7a170.7,170.7 0,0 1,170.7 -170.7h682.7zM768,542.6c0,43.5 -114.6,78.8 -256,78.8s-256,-35.3 -256,-78.8v157.5l0.1,2.8c4.8,42.2 117.5,76 255.9,76 141.4,0 256,-35.3 256,-78.8zM768,345.7c0,43.5 -114.6,78.8 -256,78.8s-256,-35.3 -256,-78.8v157.5l0.1,2.8c4.8,42.2 117.5,76 255.9,76 141.4,0 256,-35.3 256,-78.8zM512,227.6c-141.4,0 -256,35.3 -256,78.8 0,43.5 114.6,78.7 256,78.7s256,-35.3 256,-78.8C768,262.8 653.4,227.6 512,227.6z"
-      android:fillColor="#36ab60"/>
+    <path
+        android:fillColor="#4CB050"
+        android:pathData="M0,0m93.1,0l837.8,0q93.1,0 93.1,93.1l0,837.8q0,93.1 -93.1,93.1l-837.8,0q-93.1,0 -93.1,-93.1l0,-837.8q0,-93.1 93.1,-93.1Z" />
+    <path
+        android:pathData="M512,471.2c137.5,0 248.2,-46.5 248.2,-103.4 0,-10.4 -3.1,-19.6 -10.4,-29 -3.1,-4.1 -6.2,-7.3 -9.3,-11.4a27.4,27.4 0,0 0,-6.2 -5.2c-2,-2 -5.2,-4.1 -8.3,-6.2 -2,-1 -4.1,-3.1 -6.2,-4.1 -4.1,-3.1 -9.3,-5.1 -13.4,-8.3 -9.3,-5.2 -20.7,-9.3 -32.1,-14.5a316.9,316.9 0,0 0,-37.2 -11.4c-8.3,-2.1 -17.6,-4.1 -26.9,-6.2A530.7,530.7 0,0 0,536.8 263.3c-8.3,1 -16.6,1 -24.8,1s-16.5,0 -25.8,1.1c-25.9,1 -50.7,4.1 -73.4,8.3 -9.3,2 -18.6,3.1 -26.9,5.1 -12.4,3.1 -24.8,6.2 -36.2,10.4 -11.4,4.1 -20.7,8.3 -30,12.4 -3.1,2 -7.2,4.1 -10.3,6.2 -10.3,6.2 -18.7,12.4 -25.9,19.6a82.5,82.5 0,0 0,-12.4 15.6,45.7 45.7,0 0,0 -7.2,24.8c0,56.9 110.7,103.4 248.2,103.4z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M512,512.5c-97.2,0 -194.4,-22.7 -248.2,-66.2v66.2c0,56.9 110.7,103.4 248.2,103.4 137.5,0 248.2,-46.5 248.2,-103.4V446.3c-53.8,43.4 -151,66.2 -248.2,66.2zM336.2,553.9a20.7,20.7 0,0 1,-20.7 -20.7c0,-11.4 9.3,-20.7 20.7,-20.7 11.4,0 20.7,9.3 20.7,20.7 0,11.4 -9.3,20.7 -20.7,20.7z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M512,657.3c-97.2,0 -194.4,-22.7 -248.2,-66.2v76.5h1C277.3,720.4 382.7,760.7 512,760.7c129.3,0 234.7,-40.3 247.1,-93.1h1.1v-76.5c-53.8,43.4 -151,66.2 -248.2,66.2zM336.2,698.6a20.7,20.7 0,0 1,-20.7 -20.7c0,-11.4 9.3,-20.7 20.7,-20.7 11.4,0 20.7,9.3 20.7,20.7 0,11.4 -9.3,20.7 -20.7,20.7z"
+        android:fillColor="#ffffff"/>
 </vector>
