--- a/app/src/main/res/layout/layout_progress_dialog.xml
+++ b/app/src/main/res/layout/layout_progress_dialog.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:includeFontPadding="false"
-            android:textColor="@color/material_on_surface_emphasis_medium"
+            android:textColor="@color/colorOnSurface"
             android:textSize="11sp"
             android:visibility="gone"
             tools:text="45.3 MB/s"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
             android:textColor="@color/material_on_surface_emphasis_medium"
-            android:textSize="13sp"
+            android:textSize="12sp"
             android:visibility="gone"
             tools:text="正在上传文件 80% ..."
             tools:visibility="visible" />
