--- a/app/src/main/res/menu/main_navigation_menu.xml
+++ b/app/src/main/res/menu/main_navigation_menu.xml
@@ -6,8 +6,12 @@
         android:title="首页" />
     <item
         android:id="@+id/file"
-        android:icon="@drawable/ic_round_folder_aws_24"
+        android:icon="@drawable/ic_round_folder_my_drive_24"
         android:title="文件" />
+    <item
+        android:id="@+id/transfer"
+        android:icon="@drawable/ic_round_change_circle_24"
+        android:title="传输" />
     <item
         android:id="@+id/mine"
         android:icon="@drawable/ic_round_person_24"
