--- a/app/src/main/res/layout/layout_file_menu_dialog.xml
+++ b/app/src/main/res/layout/layout_file_menu_dialog.xml
@@ -61,7 +61,7 @@
             app:iconTint="#43A047" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_fetch"
+            android:id="@+id/btn_download"
             style="@style/MaterialButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
