--- a/app/src/main/res/layout/item_cloud_file_path_indicator.xml
+++ b/app/src/main/res/layout/item_cloud_file_path_indicator.xml
@@ -8,7 +8,7 @@
         style="@style/MaterialButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ellipsize="start"
+        android:ellipsize="end"
         android:fontFamily="sans-serif"
         android:letterSpacing="0"
         android:minWidth="50dp"
