--- a/app/src/main/res/menu/tasks_tool_bar_menu.xml
+++ b/app/src/main/res/menu/tasks_tool_bar_menu.xml
@@ -3,31 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@+id/switch_page"
-        android:icon="@drawable/ic_round_switch_24"
+        android:id="@+id/start"
+        android:icon="@drawable/ic_round_play_arrow_24"
         android:iconTint="@color/colorOnPrimary"
-        android:title="@string/switch_page"
+        android:title="@string/start_all_tasks"
+        android:visible="false"
         app:iconTint="@color/colorOnPrimary"
         app:showAsAction="always"
-        tools:ignore="AlwaysShowAction,UnusedAttribute">
-        <menu>
-            <item
-                android:id="@+id/task_download"
-                android:title="@string/task_download" />
-            <item
-                android:id="@+id/task_upload"
-                android:title="@string/task_upload" />
-            <item
-                android:id="@+id/task_cloud_download"
-                android:title="@string/task_cloud_download" />
-            <item
-                android:id="@+id/task_done"
-                android:title="@string/task_done" />
-            <item
-                android:id="@+id/task_cancel"
-                android:title="@string/cancel" />
-        </menu>
-    </item>
+        tools:ignore="AlwaysShowAction,UnusedAttribute" />
+    <item
+        android:id="@+id/pause"
+        android:icon="@drawable/ic_round_pause_24"
+        android:iconTint="@color/colorOnPrimary"
+        android:title="@string/pause_all_tasks"
+        android:visible="false"
+        app:iconTint="@color/colorOnPrimary"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction,UnusedAttribute" />
+
     <item
         android:id="@+id/more"
         android:icon="@drawable/ic_round_more_vert_24"
@@ -38,14 +31,47 @@
         tools:ignore="UnusedAttribute">
         <menu>
             <item
-                android:id="@+id/cancel_all_uploads"
-                android:title="@string/cancel_all_uploads" />
+                android:id="@+id/pause_all"
+                android:title="@string/pause_all_tasks">
+                <menu>
+                    <item
+                        android:id="@+id/pause_all_uploads"
+                        android:title="@string/pause_all_uploads" />
+                    <item
+                        android:id="@+id/pause_all_downloads"
+                        android:title="@string/pause_all_downloads" />
+                    <item android:title="@string/cancel" />
+                </menu>
+            </item>
+
             <item
-                android:id="@+id/pause_all_downloads"
-                android:title="@string/pause_all_downloads" />
+                android:id="@+id/cancel_all"
+                android:title="@string/cancel_all_tasks">
+                <menu>
+                    <item
+                        android:id="@+id/cancel_all_uploads"
+                        android:title="@string/cancel_all_uploads" />
+                    <item
+                        android:id="@+id/cancel_all_downloads"
+                        android:title="@string/cancel_all_downloads" />
+                    <item android:title="@string/cancel" />
+                </menu>
+            </item>
+
             <item
-                android:id="@+id/cancel_all_downloads"
-                android:title="@string/cancel_all_downloads" />
+                android:id="@+id/clear_all"
+                android:title="@string/clear_all_task_histories">
+                <menu>
+                    <item
+                        android:id="@+id/clear_all_uploads"
+                        android:title="@string/clear_all_uploads" />
+                    <item
+                        android:id="@+id/clear_all_downloads"
+                        android:title="@string/clear_all_downloads" />
+                    <item android:title="@string/cancel" />
+                </menu>
+            </item>
+
             <item
                 android:id="@+id/cancel"
                 android:title="@string/cancel" />
