--- a/videoview/src/main/res/layout/layout_player_landscape_control_view.xml
+++ b/videoview/src/main/res/layout/layout_player_landscape_control_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="105dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="bottom"
     android:background="@drawable/shadow_player_controller_bottom">
 
@@ -12,8 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:visibility="gone"
+            tools:text="蝙蝠侠大战超人.正义黎明.Batman.v.Superman.Dawn.of.Justice.2016.EXTENDED.BD1080P.X264.AC3.Mandarin.English.CHS-ENG.Adans"
+            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/seekLayout"
@@ -93,7 +109,7 @@
                 android:id="@+id/tvSize"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginEnd="16dp"
                 android:alpha="0.5"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
