--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,5 +7,11 @@
         android:layout_height="match_parent"
         tools:context=".views.fragment.HomeFragment">
 
+        <Button
+            android:id="@+id/btn_backup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="备份文件" />
     </FrameLayout>
 </layout>
