--- a/app/src/main/res/layout/layout_file_menu_dialog.xml
+++ b/app/src/main/res/layout/layout_file_menu_dialog.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivHandler"
+            android:id="@+id/handler"
             android:layout_width="40dp"
             android:layout_height="4dp"
             android:layout_gravity="center_horizontal"
