--- a/app/src/main/res/layout/layout_video_detail_dialog.xml
+++ b/app/src/main/res/layout/layout_video_detail_dialog.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivHandler"
+            android:id="@+id/handler"
             android:layout_width="40dp"
             android:layout_height="4dp"
             android:layout_gravity="center_horizontal"
@@ -32,6 +32,7 @@
             android:visibility="gone" />
 
         <androidx.core.widget.NestedScrollView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
@@ -43,7 +44,7 @@
 
                 <android.widget.Space
                     android:layout_width="0dp"
-                    android:layout_height="16dp" />
+                    android:layout_height="8dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -161,34 +162,34 @@
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
 
+                <android.widget.Space
+                    android:layout_width="0dp"
+                    android:layout_height="10dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_play"
+                    style="@style/MaterialButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginEnd="18dp"
+                    android:text="@string/play_now"
+                    android:textColor="@color/colorSecondary" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_cancel"
+                    style="@style/MaterialButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginEnd="18dp"
+                    android:text="@string/confirm" />
+
+                <android.widget.Space
+                    android:layout_width="0dp"
+                    android:layout_height="20dp" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
-        <android.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="10dp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_play"
-            style="@style/MaterialButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"
-            android:text="@string/play_now"
-            android:textColor="@color/colorSecondary" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_cancel"
-            style="@style/MaterialButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"
-            android:text="@string/confirm" />
-
-        <android.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="20dp" />
     </LinearLayout>
 </layout>
