--- a/app/src/main/res/drawable/shape_audio_seek_thumb.xml
+++ b/app/src/main/res/drawable/shape_audio_seek_thumb.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#E8E8E8" />
+    <solid android:color="@color/colorSecondary" />
     <size
         android:width="10dp"
         android:height="10dp" />
