--- a/app/src/main/res/layout/layout_audio_player_dialog.xml
+++ b/app/src/main/res/layout/layout_audio_player_dialog.xml
@@ -21,25 +21,13 @@
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardBackgroundColor="@color/colorCardViewBackground"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="8dp"
             app:cardElevation="0dp"
-            app:strokeWidth="0dp">
-
-            <ImageView
-                android:id="@+id/iv_blur_background"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_default_blur_audio_background" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="#31000000" />
+            app:strokeColor="@color/colorItemDecoration"
+            app:strokeWidth="@dimen/itemDecorationSize">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -74,13 +62,10 @@
                             android:id="@+id/tv_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:shadowColor="@android:color/black"
-                            android:shadowDx="0"
-                            android:shadowDy="0"
-                            android:shadowRadius="3"
-                            android:alpha="0.9"
+                            android:ellipsize="end"
+                            android:maxLines="1"
                             android:text="G.E.M. 邓紫棋 - 多远都要在一起.flac"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorOnSurface"
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
@@ -88,38 +73,30 @@
                             android:id="@+id/tv_artist"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:shadowColor="@android:color/black"
-                            android:shadowDx="0"
-                            android:shadowDy="0"
-                            android:shadowRadius="3"
-                            android:alpha="0.8"
+                            android:ellipsize="end"
+                            android:maxLines="1"
                             android:text="邓紫棋 - 新的心跳"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorOnSurfaceMedium"
                             android:textSize="12sp" />
+
+                        <SeekBar
+                            android:id="@+id/seek_bar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:background="@null"
+                            android:max="1000"
+                            android:maxHeight="2dp"
+                            android:minHeight="30dp"
+                            android:paddingStart="0dp"
+                            android:paddingEnd="0dp"
+                            android:progressDrawable="@drawable/selector_audio_seekbar"
+                            android:thumb="@drawable/shape_audio_seek_thumb"
+                            android:thumbOffset="0dp"
+                            tools:progress="50"
+                            tools:secondaryProgress="150" />
                     </LinearLayout>
                 </LinearLayout>
-
-                <Space
-                    android:layout_width="8dp"
-                    android:layout_height="8dp" />
-
-                <SeekBar
-                    android:id="@+id/seek_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="3dp"
-                    android:layout_marginEnd="3dp"
-                    android:background="@null"
-                    android:max="1000"
-                    android:maxHeight="2dp"
-                    android:minHeight="30dp"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="0dp"
-                    android:progressDrawable="@drawable/selector_audio_seekbar"
-                    android:thumb="@drawable/shape_audio_seek_thumb"
-                    android:thumbOffset="0dp"
-                    tools:progress="50" />
 
                 <Space
                     android:layout_width="8dp"
@@ -132,13 +109,23 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/tv_position"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
+                        android:layout_weight="1"
+                        android:text="00:00 / 00:00"
+                        android:textColor="@color/colorOnSurfaceMedium"
+                        android:textSize="14sp" />
+
                     <ImageButton
                         android:id="@+id/ib_previous"
                         android:layout_width="46dp"
                         android:layout_height="46dp"
-                        android:background="@drawable/selector_audio_control_background"
+                        android:background="@drawable/selector_audio_control_dark_background"
                         android:src="@drawable/ic_round_skip_previous_24"
-                        app:tint="@android:color/white"
+                        app:tint="@color/colorOnSurface"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <Space
@@ -154,9 +141,9 @@
                             android:layout_width="46dp"
                             android:layout_height="46dp"
                             android:layout_gravity="center"
-                            android:background="@drawable/selector_audio_control_background"
+                            android:background="@drawable/selector_audio_control_dark_background"
                             android:src="@drawable/ic_round_play_arrow_24"
-                            app:tint="@android:color/white"
+                            app:tint="@color/colorOnSurface"
                             tools:ignore="TouchTargetSizeCheck" />
 
                         <ProgressBar
@@ -164,8 +151,8 @@
                             android:layout_width="46dp"
                             android:layout_height="46dp"
                             android:layout_gravity="center"
-                            android:background="@drawable/selector_audio_control_background"
-                            android:indeterminateTint="@android:color/white"
+                            android:background="@drawable/selector_audio_control_dark_background"
+                            android:indeterminateTint="@color/colorOnSurface"
                             android:padding="13dp"
                             android:visibility="gone" />
 
@@ -179,31 +166,37 @@
                         android:id="@+id/ib_next"
                         android:layout_width="46dp"
                         android:layout_height="46dp"
-                        android:background="@drawable/selector_audio_control_background"
+                        android:background="@drawable/selector_audio_control_dark_background"
                         android:src="@drawable/ic_round_skip_next_24"
-                        app:tint="@android:color/white"
+                        app:tint="@color/colorOnSurface"
                         tools:ignore="TouchTargetSizeCheck" />
-
-                    <TextView
-                        android:id="@+id/tv_position"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="3dp"
-                        android:layout_weight="1"
-                        android:gravity="end"
-                        android:shadowColor="@android:color/black"
-                        android:shadowDx="0"
-                        android:shadowDy="0"
-                        android:shadowRadius="3"
-                        android:alpha="0.9"
-                        android:text="00:00 / 00:00"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_background"
+            style="@style/MaterialButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:alpha="0.5"
+            android:enabled="false"
+            android:layout_marginEnd="18dp"
+            android:text="@string/play_in_background" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_cancel"
+            style="@style/MaterialButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginEnd="18dp"
+            android:text="@string/cancel" />
+
+        <android.widget.Space
+            android:layout_width="0dp"
+            android:layout_height="20dp" />
     </LinearLayout>
 </layout>
