--- a/media3/src/main/res/color/color_media3_checkbox_button_tint.xml
+++ b/media3/src/main/res/color/color_media3_checkbox_button_tint.xml
@@ -2,17 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Disabled -->
-    <item android:alpha="0.38" android:color="@color/colorOnSurface" android:state_enabled="false" />
+    <item android:alpha="0.38" android:color="@color/colorOnSurfaceMedium" android:state_enabled="false" />
 
     <!-- Error -->
-    <item android:color="@color/colorOnSurface" app:state_error="true" />
+    <item android:color="@color/colorOnSurfaceMedium" app:state_error="true" />
 
     <!-- Indeterminate -->
-    <item android:color="@color/colorOnSurface" app:state_indeterminate="true" />
+    <item android:color="@color/colorOnSurfaceMedium" app:state_indeterminate="true" />
 
     <!-- Checked -->
     <item android:color="@color/colorSecondary" android:state_checked="true" />
 
     <!-- Unchecked -->
-    <item android:color="@color/colorOnSurface" android:state_checked="false" />
+    <item android:color="@color/colorOnSurfaceMedium" android:state_checked="false" />
 </selector>
