--- a/media3/src/main/res/layout/media3_player_view.xml
+++ b/media3/src/main/res/layout/media3_player_view.xml
@@ -17,7 +17,8 @@
             android:id="@+id/media3_content_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            app:resize_mode="fit">
 
             <ImageView
                 android:id="@+id/media3_iv_holder_background"
